fix: Update to correct Docker Hub image tag devops-stage-two
- Change images to yimikaade/wonderful:devops-stage-two in .env.example
- Remove obsolete version field from docker-compose.yml
- Tested successfully:
  ✓ Services healthy
  ✓ Normal: Blue active (X-App-Pool: blue)
  ✓ Chaos: Auto-failover to Green (X-App-Pool: green)
  ✓ Zero failed requests
  ✓ Headers preserved

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Blue/Green Deployment Configuration
 
 # Container Images (pre-built, do not modify)
-BLUE_IMAGE=ghcr.io/hngprojects/hng_boilerplate_nodejs_web:staging
-GREEN_IMAGE=ghcr.io/hngprojects/hng_boilerplate_nodejs_web:staging
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 
 # Active pool (blue or green) - determines primary upstream
 ACTIVE_POOL=blue
