--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,20 @@ PORT=8080
 NGINX_PORT=8080
 BLUE_PORT=8081
 GREEN_PORT=8082
+
+# Stage 3: Monitoring and Alerting Configuration
+
+# Slack webhook URL for alerts (replace with your actual webhook)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Error rate threshold percentage (trigger alert if exceeded)
+ERROR_RATE_THRESHOLD=2
+
+# Sliding window size for error rate calculation (number of requests)
+WINDOW_SIZE=200
+
+# Alert cooldown period in seconds (prevent alert spam)
+ALERT_COOLDOWN_SEC=300
+
+# Maintenance mode flag (suppress alerts during planned operations)
+MAINTENANCE_MODE=false
