--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -12,14 +12,21 @@ http {
         server ${BACKUP_HOST}:${BACKUP_PORT} backup;
     }
 
-    # Health check and logging
-    log_format upstream_logging '[$time_local] $remote_addr - $request '
-                                'upstream: $upstream_addr '
-                                'status: $status '
-                                'pool: $upstream_http_x_app_pool '
-                                'release: $upstream_http_x_release_id';
+    # Enhanced logging format for monitoring and alerting
+    log_format monitoring 'timestamp="$time_iso8601" '
+                         'remote_addr="$remote_addr" '
+                         'method="$request_method" '
+                         'uri="$request_uri" '
+                         'status=$status '
+                         'upstream="$upstream_addr" '
+                         'upstream_status="$upstream_status" '
+                         'pool="$upstream_http_x_app_pool" '
+                         'release="$upstream_http_x_release_id" '
+                         'request_time=$request_time '
+                         'upstream_response_time="$upstream_response_time" '
+                         'bytes_sent=$bytes_sent';
     
-    access_log /var/log/nginx/access.log upstream_logging;
+    access_log /var/log/nginx/access.log monitoring;
     error_log /var/log/nginx/error.log warn;
 
     server {
