--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,65 @@
 # Environment variables
 .env
+.env.local
 
 # Docker volumes
 volumes/
 
 # Logs
 *.log
+logs/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PIPFILE.lock
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+
+# Virtual environments
+venv/
+env/
+env.bak/
+venv.bak/
+.venv
 
 # OS files
 .DS_Store
 Thumbs.db
+.AppleDouble
+.LSOverride
+*.swp
+*.swo
+*~
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
