--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   # Blue application instance
   app_blue:
-    image: ${BLUE_IMAGE}
+    image: ${BLUE_IMAGE:-yimikaade/wonderful:devops-stage-two}
     container_name: app_blue
     environment:
       - APP_POOL=blue
-      - RELEASE_ID=${RELEASE_ID_BLUE}
+      - RELEASE_ID=${RELEASE_ID_BLUE:-v1.0.0-blue}
       - PORT=${PORT:-8080}
     ports:
       - "${BLUE_PORT:-8081}:8080"
@@ -21,11 +21,11 @@ services:
 
   # Green application instance
   app_green:
-    image: ${GREEN_IMAGE}
+    image: ${GREEN_IMAGE:-yimikaade/wonderful:devops-stage-two}
     container_name: app_green
     environment:
       - APP_POOL=green
-      - RELEASE_ID=${RELEASE_ID_GREEN}
+      - RELEASE_ID=${RELEASE_ID_GREEN:-v1.0.0-green}
       - PORT=${PORT:-8080}
     ports:
       - "${GREEN_PORT:-8082}:8080"
@@ -44,7 +44,7 @@ services:
     image: nginx:alpine
     container_name: nginx
     environment:
-      - ACTIVE_POOL=${ACTIVE_POOL}
+      - ACTIVE_POOL=${ACTIVE_POOL:-blue}
     ports:
       - "${NGINX_PORT:-8080}:80"
     volumes:
@@ -73,7 +73,7 @@ services:
       dockerfile: Dockerfile.watcher
     container_name: alert_watcher
     environment:
-      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
+      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL:-https://hooks.slack.com/services/YOUR/WEBHOOK/URL}
       - ERROR_RATE_THRESHOLD=${ERROR_RATE_THRESHOLD:-2}
       - WINDOW_SIZE=${WINDOW_SIZE:-200}
       - ALERT_COOLDOWN_SEC=${ALERT_COOLDOWN_SEC:-300}
